# loiter

./: .gitignore  AGENTS.md  CLAUDE_v1_lab.md  README.md  SESSION_2026-05-31.md
broker/: mosquitto.conf
docs/: P4c-proposal.md  P5-dry-run-checklist.md  mqtt-protocol-v1.md  mqtt-protocol.md
firmware/: README.md  platformio.ini
firmware/src/: config.h.example  loiter_main.cpp  main.cpp  net.cpp  net.h  sprint0_echo.cpp
firmware/src/_v1_archive/: loiter_main.cpp
scripts/: publish_ota.sh
server/: README.md  pyproject.toml
server/loiter/: __init__.py  avatar.py  config.py  main.py  mqtt_bridge.py  pair_engine.py  profile_store.py  room.py  ws.py
server/loiter/_v1_archive/: achievements.py  avatar.py  avatar_pool.py  mqtt_bridge_v1.py  npc.py  skills.py  tasks.py
server/loiter/islands/: __init__.py  assignment.py  hi.py  reading.py  spectrum.py
server/loiter/sprite_layers/: manifest.json
server/tests/: test_empty_profile_adopt.py  test_hi_engine.py  test_live_fixes.py  test_p1_ws_pipeline.py  test_p3_hi_pipeline.py  test_p4a_reading_pipeline.py  test_pb_join_island.py  test_profile_store.py  test_reading.py  test_reading_guard.py  test_reset_fresh_spectrum.py
skills/loiter-flash/: SKILL.md
skills/loiter-flash/scripts/: flash.py
web/: index.html  index_v1_backup.html
web/_v1_archive/: index_v2_xianxia_backup.html
web/firmware/: .gitkeep
