[project]
name = "loiter-server"
version = "0.1.0"
description = "Loiter Hub Server — MQTT bridge + WebSocket + 房间状态权威 (GLEAM Hall)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "paho-mqtt>=2.1",
    "httpx>=0.27",
]

[project.optional-dependencies]
avatar = [
    "pillow>=10.4",
]
dev = [
    "websocket-client>=1.8",
]

[tool.uv]
package = false
